# Ovs

./: CMakeLists.txt  QuadraticEquation  main.cpp  quadraticEquation.cpp
